--- a/web/index.html
+++ b/web/index.html
@@ -112,18 +112,18 @@
             </div>
           </div>
           <div class="row">
-              <div class="col-12">
-                <div id="data" style="width:100%; height:60vh; overflow-y:scroll"></div>
-                <br />
-              </div>
+            <div class="col-12">
+              <div id="data" style="width:100%; height:60vh; overflow-y:scroll"></div>
+              <br />
+            </div>
 
-              <div class="col-12">
-                <div class="dropdown float-right">
-                  <button id="btn-export" type="button" class="btn btn-sm btn-outline-secondary" disable>
-                    Export as SAM
-                  </button>
-                </div> 
+            <div class="col-12">
+              <div class="dropdown float-right">
+                <button id="btn-export" type="button" class="btn btn-sm btn-outline-secondary" disable>
+                  Export as SAM
+                </button>
               </div> 
+            </div> 
           </div>
         </main>
       </div>
@@ -136,7 +136,10 @@
     <script src="node_modules/handsontable/dist/handsontable.full.min.js"></script>
     <script src="node_modules/@robertaboukhalil/aioli/aioli.js"></script>
     <script>
-    var app = null, table = null, debug = window.location.hostname == "localhost";
+    var app = null,
+        table = null,
+        browser = null,
+        debug = window.location.hostname == "localhost";
     var DIR_SAMPLE_BAM_PREFIX = debug ? "../../../" : "";
     var DIR_IMPORTS = [ "samtools.worker.js" ];
     var DIR_SAMPLE_BAM = [
@@ -245,7 +248,6 @@
           $(".colHeader").show();
           table.updateSettings({ colHeaders: cols });
         }
-        
       }
 
       // -----------------------------------------------------------------------
@@ -260,37 +262,45 @@
         table.loadData(d);
       }
 
-      mount(files) {
-        // Infer which file is .bam, which is .bai
-        var bamFile = null, baiFile = null;
-        for(var f of files) {
-          var fname = this.isURL(f) ? f : f.name;
-          var ext = fname.split('.').pop();
-          if(ext == "bam")
-            bamFile = f;
-          if(ext == "bai")
-            baiFile = f;
+      mount(filesToMount) {
+        var mountConfig = {}, files = {};
+
+        // Track files by file extension
+        for(var file of filesToMount) {
+          var isURL = this.isURL(file),
+              filename = isURL ? file : file.name,
+              extension = filename.split('.').pop();
+
+          files[extension] = {
+            name: filename,
+            file: file,
+            isURL: isURL
+          };
         }
-        if(files.length != 2 || bamFile == null || baiFile == null) {
+
+        // Error handling
+        if(filesToMount.length != 2 || files.bam == null || files.bai == null) {
           alert("Invalid input: Please select two files: a .bam file and a .bam.bai file");
           return;
         }
 
-        var config = {};
-        var isURL = this.isURL(bamFile) && this.isURL(baiFile);
-        config[isURL ? "urls" : "files"] = [bamFile, baiFile];
+        // Mount config: support URLs or files
+        var isURL = files.bam.isURL && files.bai.isURL;
+        mountConfig[isURL ? "urls" : "files"] = [files.bam.file, files.bai.file];
 
-        // Mount files or URLs
-        return this.aioli.mount(config).then(mounted => {
-          this.log("Mounted:", mounted);
-          if(isURL)
-            return;
+        // Mount files
+        return this.aioli
+          .mount(mountConfig)
+          .then(mounted => {
+            this.log("Mounted:", mounted);
 
-          // If user provided their own .bam file, run simple command on it
-          var bamFilePath = mounted[bamFile.name].path;
-          this.statusMount(bamFilePath);
-          return this.query(`samtools view -H ${bamFilePath}`);
-        });
+            // If user provided their own .bam file, run simple command on it
+            if(!isURL) {
+              var bamFilePath = mounted[files.bam.name].path;
+              this.statusMount(bamFilePath);
+              return this.query(`samtools idxstats ${bamFilePath}`);
+            }
+          });
       }
 
       query(query, description="") {
@@ -309,16 +319,14 @@
             return;
           }
           // If have output to display, split by tab and limit nb rows
-          if(out.stdout != null) {
+          if(out.stdout == null)
+            this.data();
+          else
             this.data(
               out.stdout
                  .slice(0, this.maxRows)
                  .map(d => d.split("\t"))
             );
-          } else {
-            this.data();
-          }
-
           this.loaded();
         });
       }
@@ -375,6 +383,9 @@
     document.addEventListener("DOMContentLoaded", function() {
       $('[data-toggle="tooltip"]').tooltip();
 
+      // Setup app
+      app = new App();
+
       // Setup data table
       table = new Handsontable(document.getElementById("data"), {
         data: [[""]], colHeaders: [""],
@@ -384,8 +395,6 @@
         licenseKey: "non-commercial-and-evaluation"
       });
 
-      // Setup app
-      app = new App();
     });
     </script>
   </body>
