Enable multi-column sorting

--- a/web/index.html
+++ b/web/index.html
@@ -390,7 +390,7 @@
       table = new Handsontable(document.getElementById("data"), {
         data: [[""]], colHeaders: [""],
         rowHeights: 30, width: '100%', stretchH: 'all', className: "htMiddle",
-        manualColumnResize: true, filters: true, columnSorting: true,
+        manualColumnResize: true, filters: true, multiColumnSorting: true,
         dropdownMenu: ["filter_by_condition", "filter_operators", "filter_by_condition2", "filter_by_value", "filter_action_bar"],
         licenseKey: "non-commercial-and-evaluation"
       });
