Update linkouts in navbar

--- a/web/index.html
+++ b/web/index.html
@@ -19,9 +19,13 @@
   <body>
     <nav class="navbar navbar-dark sticky-top bg-primary flex-md-nowrap p-0">
       <a class="navbar-brand text-center bg-primary col-sm-1 col-md-1 mr-0" href="/">bam.bio</a>
-      <ul class="navbar-nav px-3">
+      <ul class="navbar-nav px-3 flex-row ml-md-auto d-none d-md-flex">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" target="_blank" href="https://github.com/robertaboukhalil/bam.bio">About</a>
+          <a class="nav-link" target="_blank" href="https://samtools.github.io/hts-specs/SAMv1.pdf">SAM Format</a>
+        </li>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <li class="nav-item text-nowrap">
+          <a class="nav-link" target="_blank" href="https://github.com/robertaboukhalil/bam.bio">Code</a>
         </li>
       </ul>
     </nav>
